// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shebang > should preserve shebang in files without an EOF character > cjs output 1`] = `
"#!/usr/bin/env node
'use strict';

for (let i = 0; i < 10; i++) {
  console.log("🦄");
}
"
`;

exports[`shebang > should preserve shebang in files without an EOF character > mjs output 1`] = `
"#!/usr/bin/env node
for (let i = 0; i < 10; i++) {
  console.log("🦄");
}
"
`;

exports[`shebang > should preserves existing shebang after successful rollup bundle > cjs output 1`] = `
"#!/usr/bin/env node
'use strict';

console.log("Hello, world!");
"
`;

exports[`shebang > should preserves existing shebang after successful rollup bundle > mjs output 1`] = `
"#!/usr/bin/env node
console.log("Hello, world!");
"
`;

exports[`shebang > should replaces an existing shebang with a custom shebang > cjs output 1`] = `
"#!/path/to/custom/interpreter

'use strict';

console.log("Hello, world!");
"
`;

exports[`shebang > should replaces an existing shebang with a custom shebang > mjs output 1`] = `
"#!/path/to/custom/interpreter

console.log("Hello, world!");
"
`;

exports[`shebang > should retain comments defined after a shebang > cjs output 1`] = `
"#!/usr/bin/env node // <-- this thing is a shebang. :)
'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function getNodeSheBang() {
  return "#!/usr/bin/env node";
}

exports.getNodeSheBang = getNodeSheBang;
"
`;

exports[`shebang > should retain comments defined after a shebang > mjs output 1`] = `
"#!/usr/bin/env node // <-- this thing is a shebang. :)
function getNodeSheBang() {
  return "#!/usr/bin/env node";
}

export { getNodeSheBang };
"
`;

exports[`shebang > should retain shebangs defined elsewhere in a file > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function getNodeSheBang() {
  return "#!/usr/bin/env node";
}

exports.getNodeSheBang = getNodeSheBang;
"
`;

exports[`shebang > should retain shebangs defined elsewhere in a file > mjs output 1`] = `
"function getNodeSheBang() {
  return "#!/usr/bin/env node";
}

export { getNodeSheBang };
"
`;
